--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ keep_files:
 # Site settings
 title: Airspace
 subtitle: "A free HTML5 agency template"
-url: "http://ndrewtl.github.io" # the base hostname & protocol for your site
+url: "https://adoring-noether-41d1aa.netlify.com" # the base hostname & protocol for your site
 # baseurl: "/the/subpath/of/your/site" # Set this value to "" if you want your site to be root
-baseurl: "/airspace-jekyll"
+baseurl: "https://adoring-noether-41d1aa.netlify.com"
 cover: "/assets/cover.png"
 logo: "/assets/logo.png"
 
